<resources>
    <string name="app_name">GameBook</string>
    <string name="newGame">Nová hra</string>
    <string name="loadGame">Nahrát hru</string>
    <string name="scoreBoard">Scoreboard</string>
    <string name="skills">Schopnosti</string>
    <string name="play">Hrát</string>
    <string name="endGame_lose">Prohra</string>
    <string name="endGame_win">Vítězství</string>
    <string name="button_fight">Bojovat</string>
    <string name="title_activity_main">Gamebook</string>
    <string name="title_activity_character_selection">Select character</string>
    <string name="action_settings">Settings</string>
    <string name="begin_fight">Začít boj</string>
    <string name="you_obtain">Získáváš:</string>
    <string name="description">Popis</string>
    <string name="options">Možnosti</string>
    <string name="separator">/</string>
    <string name="attributes">Atributy</string>
    <string name="defaultAttributes">Startovní atributy</string>
    <string name="enemies">Nepřátelé</string>
    <string name="keyword_from">z</string>
    <string name="dead">Mrtvý</string>
    <string name="turn">Kolo</string>
    <string name="attr_value_zero">0</string>
    <string name="attr_health">Zdraví</string>
    <string name="attr_luck">Štěstí</string>
    <string name="attr_attack">Útok</string>
    <string name="attr_baseDmg">Základní poškození</string>
    <string name="attr_defense">Obrana</string>
    <string name="attr_skill">Dovednost</string>
    <string name="attr_skill_power">Síla schopností</string>
    <string name="base_skill_power">Základní síla dovednosti</string>
    <string name="power">Síla</string>
    <string name="attr_critical">Šance na kritické zranění</string>
    <string name="dsc_default">Default</string>
    <string name="title_activity_story_selection">StorySelectionActivity</string>
    <string name="title_activity_playground">PlaygroundActivity</string>
    <string name="option_disabled">(Zablokováno)</string>
    <string name="option_cant_return">(Sem se již nebudeš moci vrátit)</string>
    <string name="enemy_boss">(Boss)</string>
    <string name="enemy_minion">(Minion)</string>
    <string name="enemy_creature"></string>
    <string name="character">Postava</string>
    <string name="fight">Boj</string>
    <string name="story">Příběh</string>
    <string name="sg_continue">Pokračovat</string>
    <string name="actual_stats">Aktualní</string>
    <string name="base_stats">Základní</string>
    <string name="damage">poškození</string>
    <string name="critical_chance">kritického</string>
    <string name="you_have_luck">Vyhýbáš se útoku. (štěstí)</string>
    <string name="enemy_has_luck">Nepřítel se vyhýbá útoku. (štěstí)</string>
    <string name="you_take">Dostáváš</string>
    <string name="special_skill">Speciální dovednost</string>
    <string name="second_attack">(Druhý úder)</string>
    <string name="you_use">Používáš</string>
    <string name="summon_cause">%1$s způsobuje zranění za %2$d.</string>
    <string name="summon_defending">%1$s poskakuje radostí z obrany svého pána.</string>
    <string name="summon_cause_critical">%1$s způsobuje kritické zranění za %2$d.</string>
    <string name="you_summon_creature">Vyvoláváš %1$s.</string>
    <string name="enemy_summon_creature">Nepřítel vyvolává %1$s.</string>
    <string name="summon_die">%1$s zemřel.</string>
    <string name="summon_take">%1$s dostává %2$d poškození.</string>
    <string name="you_cause">Způsobuješ</string>
    <string name="overtime_works">účinkuje</string>
    <string name="overtime_works_on_summon">účinkuje na pomocníkovi %1$s</string>
    <string name="enemy_use">používá</string>
    <string name="for_word">za</string>
    <string name="fight_aspect_health">(Zdraví)</string>
    <string name="fight_aspect_defense">(Obrana)</string>
    <string name="fight_aspect_skill">(Dovednost)</string>
    <string name="fight_aspect_luck">(Štěstí)</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="log">Log</string>
    <string name="close_book">Zavřít příběh</string>
    <string name="close_book_when_fighting_description">Právě bojujete. \nOpravdu chcete zavřít příběh?</string>
    <string name="close_book_description">Hra bude ukončena.\nHra se uloží na počátku této sekce, pokud máte sekci rozehranou, přejděte na další sekci jinak přijdete o změny v této sekci.\nChcete příběh opravdu ukončit?</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="confirm">Potvrdit</string>
    <string name="modifications">Modifikace</string>
    <string name="stories">Příběhy</string>
    <string name="story_changed">Detekována změna příběhu</string>
    <string name="story_changed_description">Původní příběh byl změněn a může dojít k odlišnostem s uloženou pozicí.\n\n
        Chcete začít příběh znovu?	</string>
    <string name="continue_story">Pokračovat</string>
    <string name="begin_again">Začít znovu</string>
    <string name="score">Skóre</string>
    <string name="close">Zavřít</string>
    <string name="guide">Příručka</string>
    <string name="drawer_open">Otevřít</string>
    <string name="drawer_close">Schovat</string>
    <string name="and">a</string>
    <string name="or">nebo</string>
    <string name="special_skill_type">Typ</string>
    <string name="special_skill_aspect_power">Síla</string>
    <string name="special_skill_aspect_chance">Šance</string>
    <string name="special_skill_trigger">Spuštení</string>
    <string name="special_skill_trigger_normal">Před normálním útokem</string>
    <string name="special_skill_trigger_before_skill">Před schopností nepřítele</string>
    <string name="special_skill_trigger_after">Po normálním útoku</string>
    <string name="special_skill_trigger_before_enemy">Před útokem nepřítele</string>
    <string name="special_skill_trigger_after_enemy">Po útoku nepřítele</string>
    <string name="special_skill_type_debuff">Snížení attributu</string>
    <string name="special_skill_type_buff">Navýšení attributu</string>
    <string name="special_skill_type_temp">(dočasně)</string>
    <string name="resting">(odpočinek)</string>
    <string name="lose_gear">(ztráta bonusů)</string>
    <string name="reset_all">(vyrovnání)</string>
    <string name="cancel_temp">(zrušení)</string>
    <string name="reset_condition">(zrušení z boje)</string>
    <string name="special_skill_type_perm">(trvale)</string>
    <string name="special_skill_type_attack">Specialní útok</string>
    <string name="select_skill">Vyberte schopnost</string>
    <string name="no_skill">Žádná</string>
    <string name="name">Název</string>
    <string name="with_luck">se štestím</string>
    <string name="special_skill_attempts">Použití</string>
    <string name="always">Vždy</string>
    <string name="in_battle">v bitvě</string>
    <string name="base_attr_inc">(základ)</string>
    <string name="gain_experience">Získáváš %d zkušeností.</string>
    <string name="level_increased">Dosáhl jsi úrovně %d.</string>
    <string name="skill_info">Info</string>
    <string name="level">Úroveň</string>
    <string name="experience">Zkušenosti</string>
    <string name="skill_list">Seznam dovedností</string>
    <string name="skill_durability">Výdrž</string>
    <string name="skill_turns">kol</string>
    <string name="b">B:</string>
    <string name="d">D:</string>
    <string name="hot">Hot:</string>
    <string name="dot">Dot:</string>
    <string name="enemy_cancel_buff">Nepřítel ti zrušil buff.</string>
    <string name="enemy_cancel_debuff">Nepřítel si zrušil debuff.</string>
    <string name="enemy_cancel_hot">Nepřítel ti zrušil hot.</string>
    <string name="enemy_cancel_dot">Nepřítel si zrušil dot.</string>
    <string name="player_cancel_buff">Zrušil jsi nepříteli buff.</string>
    <string name="player_cancel_debuff">Zrušil sis debuff.</string>
    <string name="player_cancel_hot">Zrušil jsi nepříteli hot.</string>
    <string name="player_cancel_dot">Zrušil sis dot.</string>
    <string name="you_applied">Aplikoval jsi %s.</string>
    <string name="enemy_applied">Nepřítel aplikoval %s.</string>
    <string name="you_cast">Používáš %s.</string>
    <string name="enemy_cast">Nepřítel používá %s.</string>
    <string name="you_cannot_attack">Nemůžeš útočit.</string>
    <string name="you_cannot_cast">Nepřítel vyblokoval tvoji schopnost.</string>
    <string name="enemy_cannot_attack">Nepřítel nemůže útočit.</string>
    <string name="enemy_cannot_cast">Vyblokoval jsi schopnost nepřítele.</string>
    <string name="select_passive_skill">%d dov. bodů.</string>
    <string name="passive_skils">Pasivní schopnosti</string>
    <string name="active_skills">Aktivní schopnosti</string>
    <string name="learn_passive_skill">Naučit</string>
    <string name="critical_strike">Kritický úder</string>
    <string name="passive_skill_triggered">Pasivní dovednost %1$s byla spuštěna.</string>
    <string name="passive_skill_refreshed">Pasivní dovednost %1$s byla obnovena.</string>
    <string name="maxAttackDamageGiven">Nejvyšší poškození z útoku</string>
    <string name="maxAttackDamageTaken">Nejvyšší obdržené poškození z útoku</string>
    <string name="maxSkillDamageTaken">Nejvyšší obdržené poškození ze schopnosti</string>
    <string name="maxSkillDamageGiven">Nejvyšší poškození ze schopnosti</string>
    <string name="totalAttackDamageTaken">Celkem obrženého poškození z útoku</string>
    <string name="totalAttackDamageGiven">Celkem darovaného poškození z útoku</string>
    <string name="totalSkillDamageTaken">Celkem obrženého poškození ze schopností</string>
    <string name="totalSkillDamageGiven">Celkem darovaného poškození ze schopností</string>
    <string name="totalDamageTaken">Celkem obdrženého poškození</string>
    <string name="totalDamageGiven">Celkem darovaného poškození</string>
    <string name="totalHealthHealed">Celkem vyléčeno zdraví</string>
    <string name="maxHealthHealed">Nejvyšší léčení</string>
    <string name="totalDamageReduce">Celkem redukováno poškození</string>
    <string name="totalAttackDamageReduce">Redukováno poškození z útoku</string>
    <string name="totalSkillDamageReduce">Redukováno poškození ze schopností</string>
    <string name="totalObtainedDamageReduce">Celkem redukováno obdrženého poškození</string>
    <string name="totalObtainedAttackDamageReduce">Redukováno obdrženého poškození z útoku</string>
    <string name="totalObtainedSkillDamageReduce">Redukováno obdrženého poškození ze schopností</string>
    <string name="criticalHits">Kritických poškození</string>
    <string name="obtainedCriticalHits">Obdržených kritických poškození</string>
    <string name="usedSkills">Použitých dovedností</string>
    <string name="sections">Celkem sekcí</string>
    <string name="visitedSections">Navštívených sekcí</string>
    <string name="totalDodgedAttacks">Vyhnutí se útoku</string>
    <string name="totalMissedAttacks">Minutých útoků</string>
    <string name="totalKilledEnemies">Celkem zabitých nepřátel</string>
    <string name="killedBosses">Zabitých bossů</string>
    <string name="killedMinions">Zabitých minionů</string>
    <string name="killedMobs">Zabitých obyčejných nepřátel</string>
    <string name="totalTurns">Celkem kol v bojích</string>
    <string name="totalBattles">Celkem vybojovaných bitev</string>
    <string name="loading">Načítám&#8230;</string>
    <string name="saving">Ukládám&#8230;</string>
    <string name="loading_message"></string>
    <string name="use_skill">Použít</string>
    <string name="close_app">Opravdu chcete zavřít aplikaci?</string>
	<string name="timespent">Čas strávený ve hře</string>
    <string name="reset_skills">Resetovat %1$dx</string>
    <string name="reset_skills_prompt">Opravdu chcete resetovat pasivní dovednosti?</string>
    <string name="summon_life">Zdraví pomocníka</string>
    <string name="tooltip_hot">Celkem HOT (postupné léčení)</string>
</resources>