<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@drawable/corners_noopacity" android:padding="10dip">

    <TextView
        android:id="@+id/dialog_text"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dsc_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="center_horizontal">
		<Button
            style="@style/button"
            android:id="@+id/positiveButon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />
        <Button
            style="@style/button"
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />

        

    </LinearLayout>

</LinearLayout>
