<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@color/background_color" android:orientation="vertical">

    <TextView
        android:id="@+id/enemy"
        style="@style/textview_attrName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/dsc_default" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/attack_name"
            style="@style/textview_debuff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:text="@string/attr_attack" />

        <TextView
            android:id="@+id/attack"
            style="@style/textview_battlenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:text="@string/attr_value_zero" />

    </TableRow>

    <TextView
        android:id="@+id/fight"
        style="@style/textview_default_attribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:text="@string/button_fight" />

    <TextView
        android:id="@+id/fight_result_as_text"
        style="@style/textview_anchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:text="@string/dsc_default" />

<View
    style="@style/line_light"
    android:layout_width="wrap_content" />

</LinearLayout>