<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="com.nex.gamebook.MainScreenActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/banner_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_banner"/>
	<ImageView
	    android:id="@+id/imageView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="20dip"
	    android:layout_marginRight="20dip"
	    
	    android:src="@drawable/logo" />
		
        <Button
            android:id="@+id/button2"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:onClick="newGame"
            android:text="@string/newGame" />

        <Button
            android:id="@+id/button1"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true"
            android:onClick="loadGame"
            android:text="@string/loadGame" />
		 
		 <Button
            android:id="@+id/button3"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true"
            android:onClick="scoreboard"
            android:text="@string/scoreBoard" />
		 <Button
            android:id="@+id/button4"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_centerHorizontal="true"
            android:onClick="guide"
            android:text="@string/guide" />
</RelativeLayout>
