<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/character_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/title"
        style="@style/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="15dip"
        android:layout_marginBottom="10dip"
        android:text="@string/dsc_default" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/corners_"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/attributes" />

            <TextView
                android:id="@+id/actualStats"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:text="@string/actual_stats" />

            <TextView
                android:id="@+id/base_stats"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_stats" />

        </LinearLayout>

        <TableLayout
            android:id="@+id/tableLayout1"
            style="@style/section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/_background_corners"
            android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_marginRight="5dp"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level" />

            <TextView
                 android:layout_marginRight="5dp"
                android:id="@+id/level"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attr_value_zero" />
        </LinearLayout>

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sel_l_health_d"
                style="@style/attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attr_health" />

            <TextView
                android:id="@+id/sel_attr_health"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/attr_value_zero" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sel_l_attack_d"
                style="@style/attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/attr_attack" />

            <TextView
                android:id="@+id/sel_attr_attack"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/attr_value_zero" />

            <TextView
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(" />

            <TextView
                android:id="@+id/sel_attr_baseDmg_d"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attr_value_zero" />

            <TextView
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=")" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sel_l_skill_d"
                style="@style/attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attr_skill" />

            <TextView
                android:id="@+id/sel_attr_skill"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/attr_value_zero" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sel_l_defense_d"
                style="@style/attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/attr_defense" />

            <TextView
                android:id="@+id/sel_attr_defense"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/attr_value_zero" />

            <TextView
                android:id="@+id/textView13"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(" />

            <TextView
                android:id="@+id/sel_l_def_perc"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attr_value_zero" />

            <TextView
                android:id="@+id/textView12"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%" />

            <TextView
                android:id="@+id/textView11"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=")" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sel_l_luck_d"
                style="@style/attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attr_luck" />

            <TextView
                android:id="@+id/sel_attr_luck"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/attr_value_zero" />

            <TextView
                android:id="@+id/luck_perc"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%" />

            <TextView
                android:id="@+id/textView9"
                style="@style/attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/attr_critical" />

            <TextView
                android:id="@+id/critical"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100" />

            <TextView
                android:id="@+id/p"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%" />
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sel_l_skillpower_d"
                style="@style/attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attr_skill_power" android:layout_marginRight="5dip"/>

            <TextView
                android:id="@+id/skill_power"
                style="@style/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attr_value_zero" />
        </LinearLayout>
    </TableLayout>

        
        
        <TableLayout
           style="@style/section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/_background_corners"
            android:padding="10dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                   android:id="@+id/textView10"
                   style="@style/attribute"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/visitedSections" />
				<TextView
                   android:id="@+id/visitedSections"
                   style="@style/number"
                   android:layout_marginLeft="5dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/attr_value_zero" />
            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                   android:id="@+id/textView0"
                   style="@style/attribute"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/sections" />
				<TextView
                   android:id="@+id/sections"
                   style="@style/number"
                   android:layout_marginLeft="5dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/attr_value_zero" />
            </TableRow>

        </TableLayout>

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/score" />

        <TextView
            android:id="@+id/score"
            style="@style/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/attr_value_zero" />

    </LinearLayout>

    <Button
        android:id="@+id/to_main_page"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/mainPage" />


</RelativeLayout>