<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/character_layout"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@drawable/background">
	
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/previous"
        android:alpha="0.8"
        android:layout_margin="5dip"
        android:src="@drawable/left" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_margin="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/next"
        android:alpha="0.8"
        android:src="@drawable/right" />
    <TextView
        android:id="@+id/textView1"
        style="@style/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/dsc_default" />

    <ViewFlipper
        android:id="@+id/viewSwitcher1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/banner_ad"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView2"
        android:layout_below="@+id/imageView1">
    </ViewFlipper>
    <com.google.android.gms.ads.AdView
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/_background_corners"
        android:id="@+id/banner_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_banner" >

    </com.google.android.gms.ads.AdView>
</RelativeLayout>